# python-task

./: .coverage  .dockerignore  dockerfile  locust.py  pyproject.toml
alembic/: env.py
alembic/versions/: 11aedbd6f2fe_add_assignee_to_tickets.py  97ca184d6ddd_default.py
app/: main.py
app/api/: ai.py  tickets.py
app/core/: config.py  database.py  deps.py  exceptions.py
app/middleware/: profiler.py  response_time.py
app/models/: ticket.py
app/repositories/: ticket_repository.py
app/schemas/: ai.py  ticket.py
app/services/: prompt_templates.py  ticket_service.py
app/services/aws/: bedrock_service.py
tests/: conftest.py  test_api_endpoints.py  test_ticket_schema.py
tests/services/: test_bedrock_service.py  test_create_ticket.py  test_delete_ticket.py  test_get_all.py  test_get_ticket.py  test_update_ticket.py
